
Changelog for the mp-* functions.

19 Sept 2010
	* Fix divide-by-zero when question mark is passed a zero.