@@ -3,3 +3,4 @@ Changelog for the mp-* functions.
 
 19 Sept 2010
 	* Fix divide-by-zero when question mark is passed a zero.
+	* Fix a bug due to rounding-overflow in the question-makr function.
